<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.selftravel.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:drawableLeft="@drawable/reg_password_icon"
        android:hint="@string/old_pwd_hint"
        android:textColorHighlight="#089bba"
        android:textColorHint="@color/hint_green" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:drawableLeft="@drawable/reg_password_icon"
        android:hint="@string/new_pwd_hint"
        android:password="true"
        android:textColorHint="@color/hint_green" />

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:drawableLeft="@drawable/user_password_sure_icon"
        android:hint="@string/pwd_confirm"
        android:textColorHint="@color/hint_green" />

    <TextView
        android:id="@+id/error_hint"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/red_errhint"
        android:visibility="gone" />

    <Button
        android:id="@+id/commit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn_bg"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>